--- a/core/res/res/values-watch/config_material.xml
+++ b/core/res/res/values-watch/config_material.xml
@@ -22,7 +22,7 @@
     <bool name="config_windowActionBarSupported">false</bool>
 
     <!-- Watch type devices have limited screen real-estate, and thus titles should not be used. -->
-    <bool name="config_windowNoTitleDefault">true</bool>
+    <bool name="config_windowNoTitleDefault">false</bool>
 
     <!-- Use micro alert controller -->
     <integer name="config_alertDialogController">1</integer>
